# Fatora

./: .env.example  .gitignore  eslint.config.js  package-lock.json  package.json  project_documentation.md  promt.md  vitest.config.ts
.agents/skills/: .antigravity-install-manifest.json
.kilo/plans/: 1784584924732-easy-store-product-strengthening-plan.md
app/: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
app/scripts/: check-i18n.mjs
app/src/context/: AppContext.tsx  AuthContext.tsx  LicenseContext.tsx  recalcCustomerBalances.test.ts
app/src/db/: fileStore.ts  index.ts
app/src/pages/: Customers.tsx  Dashboard.tsx  Expenses.tsx  HR.tsx  Inventory.tsx  Purchases.tsx  Reports.tsx  Returns.tsx  (+3 more)
scripts/: generate-license.mjs
src/: App.css  App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Layout.tsx
src/context/: AppContext.tsx
src/db/: backup.ts  idb.ts  index.ts  migrate.test.ts
src/pages/: Exchange.tsx  Expenses.tsx  HR.tsx  Inventory.tsx  Login.tsx  Purchases.tsx  Reports.tsx  Settings.tsx  Treasury.tsx
src/repository/: index.ts
src/services/: branchRollup.ts  cashAudit.ts  databaseMaintenance.ts  einvoice.ts  excel.test.ts  excel.ts  financials.ts  index.ts  journal.ts  license.test.ts  license.ts  maintenance.ts  newServices.test.ts  sectors.ts  tax.test.ts  tax.ts  taxQr.ts  warehouse.ts  weightScale.ts
src/types/: ai.ts  index.ts
(+29 files in other folders)
