[package]
name = "easy-store-erp"
version = "1.0.0"
description = "Easy Store ERP — نظام محاسبي ومخازني متكامل (لوكل بالكامل)"
authors = ["Easy Store"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "easy_store_erp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# هذه الميزة تُستخدم أثناء البناء للإنتاج
custom-protocol = ["tauri/custom-protocol"]
